Add initial code to the first Bode plot example.

--- a/bodePlots.ipynb
+++ b/bodePlots.ipynb
@@ -5,7 +5,9 @@
    "id": "d5ac19db",
    "metadata": {},
    "source": [
-    "# Bode Grafiken"
+    "# Bode Grafiken\n",
+    "\n",
+    "Man kann mit Python auch Bode-Plots erstellen; es gibt mehrere Bibliotheken, die gut funktionieren, wie zum Beispiel SciPy oder Control. Für die erste Aufgabe schauen wir uns an, wie es mit der Control-Bibliothek funktioniert."
    ]
   },
   {
@@ -38,16 +40,16 @@
     }
    ],
    "source": [
-    "# Nimm die Übertragungsfunktion G(s) = K mit K = 10\n",
+    "# Nimm die Übertragungsfunktion G(s) = K, mit K = 10\n",
     "K = 10\n",
     "G = ctrl.TransferFunction([K], [1])\n",
     "\n",
-    "# Skizziere den Frequenzgang der Übertragungsfunktion\n",
-    "w = np.logspace(-2, 2, 100)  # Frequenzbereich von 0.01 bis 100 rad/s\n",
+    "# Skizziere den Frequenzgang der Übertragungsfunktion mit dem Frequenzbereich von 0.01 bis 100 rad/s\n",
+    "w = np.logspace(-2, 2, 100)\n",
     "out = ctrl.bode(G, w)\n",
     "\n",
-    "# Plotten der Amplitude und Phase\n",
-    "plt.show()\n"
+    "# Plotten\n",
+    "plt.show()"
    ]
   }
  ],
