Add changes to documentation.

--- a/bodePlots.ipynb
+++ b/bodePlots.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3fc2f02a",
    "metadata": {},
    "outputs": [],
@@ -32,18 +32,18 @@
    "id": "522f05ed",
    "metadata": {},
    "source": [
-    "### Control-Bibliothek funktionen\n",
+    "### Control-Bibliothek Funktionen\n",
     "\n",
-    "Mann kann ein Übertragungsfunktion mit dem Befehl **ctrl.TransferFunction()** stellen. Diese Funktion nimmt den Koeffizienten von den Zähler und Nenner Polynomen als ein array. Zum Beispiel, für die Übertragungsfunktion:\n",
+    "Man kann ein Übertragungsfunktion mit dem Befehl **ctrl.TransferFunction()** stellen. Diese Funktion nimmt den Koeffizienten von den Zähler und Nenner Polynomen als ein array. Zum Beispiel, für die Übertragungsfunktion:\n",
     "\n",
     "$$G(s) = \\frac{s+1}{s^2 + 2s +1}$$\n",
     "\n",
-    "mann merkt dann, dass der Vektor für den Zähler **[1,1]** ist, denn wir haben zwei Elemente, die beide ein Koeffizient von 1 haben. Für den Nenner ist es so als **[1,2,1]**, weil wir drei Elementen haben, die als Koeffizienten 1, 2, 1 haben. Wir können das jetzt mit Python probieren."
+    "mann merkt dann, dass der Vektor für den Zähler **[1,1]** ist, denn wir haben zwei Elemente, die beide ein Koeffizient von 1 haben. Für den Nenner ist es so als **[1,2,1]**, weil wir drei Elementen haben, die als Koeffizienten 1, 2, 1 haben. Jetzt wollen wir diese Übertragungsfunktion in Python definieren und analysieren:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "949589de",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "b7efc2fe",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "5e0df912",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "fb0481c3",
    "metadata": {},
    "outputs": [
