Add details for the examples.

--- a/bodePlots.ipynb
+++ b/bodePlots.ipynb
@@ -125,8 +125,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "457e5bd4",
+   "metadata": {},
+   "source": [
+    "### Besipiel # 2: I-Glied\n",
+    "\n",
+    "Der I-Glied, mit $I$ für *Integration* ist beschrieben als \n",
+    "\n",
+    "$$\\dot{y}(t) = u(t)$$\n",
+    "\n",
+    "Unsere Laplace Transformation gilt dann:\n",
+    "\n",
+    "$$\\mathcal{L}\\{\\dot{y}(t)\\} = sY(s) = U(s)$$\n",
+    "\n",
+    "$$\\Rightarrow \\boxed{G(s) = \\frac{Y(s)}{U(s)}= \\frac{1}{s}}$$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5e0df912",
    "metadata": {},
    "outputs": [
@@ -152,6 +170,24 @@
     "# Plotten\n",
     "out.set_plot_title(\"Bode Plot for G(s) = 1/s\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d29e5cc",
+   "metadata": {},
+   "source": [
+    "### Besipiel # 3: D-Glied\n",
+    "\n",
+    "Der D-Glied ist beschreibt als $D$ für *Differential* und die funktion ist gegeben als: \n",
+    "\n",
+    "$$y(t) = \\dot{u}(t)$$\n",
+    "\n",
+    "Die Laplace Transformation gilt dann:\n",
+    "\n",
+    "$$\\mathcal{L}\\{\\dot{y}(t)\\} = Y(s) = sU(s)$$\n",
+    "\n",
+    "$$\\Rightarrow \\boxed{G(s) = \\frac{Y(s)}{U(s)} = s}$$"
    ]
   },
   {
