Add changes to current description of the derivative example.

--- a/bodePlots.ipynb
+++ b/bodePlots.ipynb
@@ -179,7 +179,7 @@
    "source": [
     "### Besipiel # 3: D-Glied\n",
     "\n",
-    "Der D-Glied ist beschreibt als $D$ für *Differential* und die funktion ist gegeben als: \n",
+    "Der D-Glied ist beschreibt als $D$ für *Differential* und die funktion ist gegeben als\n",
     "\n",
     "$$y(t) = \\dot{u}(t)$$\n",
     "\n",
