Add modifications to time delay example.

--- a/bodePlots.ipynb
+++ b/bodePlots.ipynb
@@ -227,11 +227,11 @@
    "source": [
     "### Beispiel # 4: T1-Glied\n",
     "\n",
-    "Der T1-Glied mit der funktion als\n",
+    "Jetzt haben wir ein T1-Glied mit der funktion als\n",
     "\n",
     "$$T\\dot{y}(t) + y(t) = Ku(t)$$\n",
     "\n",
-    "Mit $T$ als Zeitkonstant und Verstärkung $K$. Die Laplace Transformation gilt dann:\n",
+    "und $T$ als Zeitkonstant und Verstärkung $K$. Die Laplace Transformation gilt dann:\n",
     "\n",
     "$$\\mathcal{L}\\{T\\dot{y}(t) + y(t) = Ku(t)\\}$$\n",
     "\n",
