Add changes to text in Bode plots file.

--- a/bodePlots.ipynb
+++ b/bodePlots.ipynb
@@ -80,7 +80,7 @@
    "id": "9fa8756f",
    "metadata": {},
    "source": [
-    "### Beispiel # 1: P-Glied\n",
+    "### Beispiel 1: P-Glied\n",
     "\n",
     "Unser P-Glied, wo $P$ steht für *Proportional* ist beschrieben als \n",
     "\n",
@@ -129,7 +129,7 @@
    "id": "457e5bd4",
    "metadata": {},
    "source": [
-    "### Besipiel # 2: I-Glied\n",
+    "### Besipiel 2: I-Glied\n",
     "\n",
     "Der I-Glied, mit $I$ für *Integration* ist beschrieben als \n",
     "\n",
@@ -177,7 +177,7 @@
    "id": "4d29e5cc",
    "metadata": {},
    "source": [
-    "### Besipiel # 3: D-Glied\n",
+    "### Besipiel 3: D-Glied\n",
     "\n",
     "Der D-Glied ist beschreibt als $D$ für *Differential* und die funktion ist gegeben als\n",
     "\n",
@@ -225,7 +225,7 @@
    "id": "7b6194e0",
    "metadata": {},
    "source": [
-    "### Beispiel # 4: T1-Glied\n",
+    "### Beispiel 4: T1-Glied\n",
     "\n",
     "Jetzt haben wir ein T1-Glied mit der funktion als\n",
     "\n",
