Add improvements to presentation.

--- a/diskretisierung.ipynb
+++ b/diskretisierung.ipynb
@@ -129,7 +129,7 @@
     "\n",
     "$$G(s) = \\frac{\\frac{1}{s^2}}{s^2 + 2 + \\frac{5}{s^2}} = \\frac{1}{s^4 + 2s^{2} + 5}$$\n",
     "\n",
-    "Dann, mann kann $s$ mit $s = \\frac{z - 1}{\\Delta t}$ und $s = \\frac{z - 1}{\\Delta t z}$ umschreiben, und für mehrere Zeitpünkte es zu berechnen. Es ist trotz, einfach es in Python zu programmieren um die Unteerschieden zwischen beide Methoden zu analysieren."
+    "Dann, man kann $s$ mit $s = \\frac{z - 1}{\\Delta t}$ und $s = \\frac{z - 1}{\\Delta t z}$ umschreiben, und für mehrere Zeitpünkte es zu berechnen. Es ist trotz, einfach es in Python zu programmieren um die Unteerschieden zwischen beide Methoden zu analysieren."
    ]
   },
   {
